# PY32F002B_Firmware

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
lib/: CMakeLists.txt
src/: main.c
startup/: startup.c  startup_py32f002bxx.s
